src/tests/testfiles/const/2.txt
testfiles/const/2.c:6:5: error: assignment of read-only variable 'b'
b = a;
^
